# flowgen

./: .gitignore  BUILD.md  CLAUDE.md  CMakeLists.txt  ENHANCEMENTS_SUMMARY.md  FLOWDUMP_ARGPARSER_UPDATE.md  FLOWDUMP_CLI11_UPDATE.md  FLOWDUMP_FLOW_DURATION_UPDATE.md  FLOWDUMP_IMPLEMENTATION.md  FLOWDUMP_PLAN.md  FLOWSTATS_DESIGN.md  FLOWSTATS_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  README.md  TEST_RESULTS.md  activate_venv.sh  requirements.txt  setup.py  test_enhancements.py
configs/: bidirectional_config.yaml  example_config.yaml  high_bandwidth.yaml
cpp/bindings/: python_bindings.cpp
cpp/include/flowgen/: flow_record.hpp  generator.hpp  patterns.hpp  utils.hpp
cpp/src/: flow_record.cpp  generator.cpp  patterns.cpp  utils.cpp
cpp/tools/flowdump/: CMakeLists.txt  README.md  arg_parser.hpp  enhanced_flow.cpp  enhanced_flow.hpp  flow_collector.cpp  flow_collector.hpp  flow_formatter.cpp  flow_formatter.hpp  generator_worker.cpp  generator_worker.hpp  main.cpp  thread_safe_queue.hpp  timestamp_chunker.cpp  timestamp_chunker.hpp
cpp/tools/flowstats/: CMakeLists.txt  main.cpp
cpp/tools/flowstats/core/: flowstats_base.h  output_formatters.h  progress_tracker.cpp  progress_tracker.h
cpp/tools/flowstats/subcommands/: flows_command.h  port_command.h
cpp/tools/flowstats/utils/: arg_parser.h  enhanced_flow.cpp  enhanced_flow.h  port_stat.h
examples/: basic_usage.py  streaming_usage.py
examples/cpp/: CMakeLists.txt  MULTI_GENERATOR_README.md  PARALLEL_PERFORMANCE.md  arg_parser.hpp  basic_usage.cpp  multi_generator_example.cpp
flowgen/: __init__.py  config.py  exporters.py  generator_interface.py  generators.py  models.py  protocols.py  utils.py
